# quantumpanel_bot

./: .env.example  .replit  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  requirements.txt  run.py  web_server.py  web_users.json
attached_assets/: Pasted--PROJECT-REQUEST-FOR-REPLIT-AGENT-TITLE-Quantum-Panel-B_1765208699683.txt  Pasted-2025-12-10T13-26-12-309689696Z-Downloading-multidict-6-_1765373401126.txt
bot/: __init__.py  add_test_data.py  alembic.ini  config.py  database.py  main.py  migrate_banned.py  migrate_prices.py
bot/alembic/: env.py
bot/handlers/: admin.py  user.py
bot/keyboards/: admin_kb.py  user_kb.py
bot/middlewares/: database.py
bot/models/: __init__.py  admin.py  base.py  key.py  order.py  product.py  seller.py  user.py
bot/services/: admin_service.py  cache.py  order_service.py  product_service.py  seller_service.py  user_service.py
bot/templates/: messages.py
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx
client/src/contexts/: AuthContext.tsx
client/src/pages/: Admins.tsx  Dashboard.tsx  Keys.tsx  Login.tsx  PremiumUsers.tsx  Products.tsx  Sellers.tsx  WebUsers.tsx
static/: index.html
